# speaksense

./: .gitignore  README.md  pyproject.toml
src/speaksense/: __init__.py  main.py
src/speaksense/templates/: index.html
