[project]
name = "speaksense"
version = "0.1.0"
description = "AI-powered speech analysis tool to improve presentation skills"
readme = "README.md"
authors = [
    { name = "Elics", email = "leeelics@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
]

[project.scripts]
speaksense = "speaksense.main:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
